Fri Sep 24 10:40:11 2004  Steve Huston  <shuston@riverace.com>

	* apps/JAWS/clients/Blobby/blobby.cpp:
	* apps/JAWS/clients/Blobby/Blob.{h cpp}:
	* apps/JAWS/clients/Blobby/Blob_Handler.cpp:
	* apps/JAWS/clients/Blobby/Options.{h cpp}:
	* apps/JAWS/clients/Caching/http_client.cpp:
	* apps/JAWS/clients/Caching/http_handler.cpp:
	* apps/JAWS/server/HTTP_Server.{h cpp}:
	* apps/JAWS/server/HTTP_Response.cpp:
	  Wide-char fixes.

Fri Sep 24 10:34:26 2004  Steve Huston  <shuston@riverace.com>

	* bin/MakeProjectCreator/config/acedefaults.mpb:
	* bin/MakeProjectCreator/config/acelib.mpb: For automake projects,
	  change ACE_ROOT to either top_srcdir or top_builddir depending
	  on whether it's looking for source (such as includes) or libraries.

	* performance-tests/Synch-Benchmarks/Synch_Lib/Synch_Benchmarks_Synch_Lib.mpc:
	  Changed base project from aceexe to acelib. This builds a library.

Fri Sep 24 07:04:29 2004  J.T. Conklin  <jtc@acorntoolworks.com>

	* Makefile.am:
	* ace.mpc:

	  Add new files.

	* ACE.h:
	* ACE_crc_ccitt.cpp:

	  Added ACE::crc_ccitt() family of functions in new file
	  ACE_crc_ccitt.cpp.

	* ACE_crc32.cpp:

	  Changed table and shift expression so the special case with
	  additional masking for systems where ACE_UINT32 is more than 32
	  bits wide (such as the Cray) is not needed.  See "A Painless
	  Guide to CRC Error Detection Algorithms" by Ross Williams for
	  details.

	* ACE.cpp:
	* ACE_crc32.cpp:

	  Split out ACE::crc32() family of functions out of ACE.cpp into
	  new file ACE_crc32.cpp.

Fri Sep 24 08:36:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-lite.h:
          The ACE_UNUSED_ARG macro didn't work with the DMC compiler, so
          added a new version of this macro that silences the not used
          warning with DMC.

Fri Sep 24 08:29:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/OS_NS_sys_socket.inl (sendto):
          Removed usage of ACE_CONST_CAST
